middlewere jwtToken exeption validator

--- a/WebKsu/appsettings.Development.json
+++ b/WebKsu/appsettings.Development.json
@@ -9,5 +9,7 @@
     "DefaultConnection": "Server=91.238.103.33;Port=2109;Database=ksudb;User Id=ksu;Password=s$5$BG)K$t!Ube65[cm158vvv44vik96;"
     //"DefaultConnection": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=123456;"
 
-  }
+  },
+  "JwtKey": "SecrHello99sd--kkTTTooolessrdfhgjjjilkfgLKUtKey42342%^&*()3mor.gf_-",
+  "AllowedHosts": "*"
 }
