--- a/WebKsu/WebKsu.csproj
+++ b/WebKsu/WebKsu.csproj
@@ -22,12 +22,13 @@
 	  </PackageReference>
 	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
 	  <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="uploads\" />
+    <Folder Include="dataRahunok\" />
   </ItemGroup>
 
 </Project>
